--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "skywalker",
   "version": "0.0.0",
+  "homepage": "https://kartheekl68.github.io/Kartheek-G-Portfolio/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
